* Fix avatar image getting formatting on height-constrained devices * Temp. fixed Scroll to Top visibility on light mode * Added quick view resume link to 404 error page

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -52,16 +52,10 @@
     right: 20px;
     z-index: 100;
     background-color: var(--color-accent);
-    color: var(--color-text-primary);
+    color: white; /* TODO: Change upon updating color scheme */
     border: none;
     border-radius: 501rem;
     padding: 10px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-
-    &:hover {
-        background-color: var(--color-accent);
-    }
 }
 
 @media screen and (max-width: 800px) {
@@ -83,9 +77,5 @@
     .scrollToTop {
         padding: 1rem;
         opacity: 0.8;
-        
-        & span {
-            display: none;
-        }
     }
 }
